# Segaley

./: .clang-format  .gitignore  CMakeLists.txt  README.md
dependencies/freetype-2.10.0/: CMakeLists.txt
dependencies/freetype-2.11.1/: CMakeLists.txt
segaley/assets/shaders/: gui.frag  gui.vert  main.vert  text.frag  text.vert
segaley/lib/camera/: CMakeLists.txt
segaley/lib/camera/include/: Camera.h  Camera2D.h  Camera3D.h
segaley/lib/camera/source/: Camera2D.cpp  Camera3D.cpp
segaley/lib/font/: CMakeLists.txt
segaley/lib/font/include/: Font.h  Text.h  TextField.h
segaley/lib/font/source/: Font.cpp  Text.cpp
segaley/lib/gl-env/: CMakeLists.txt
segaley/lib/gl-env/include/: Gl.h  Image.h  Shader.h  ShaderProgram.h  Sprite.h  Texture2D.h  Vao.h  Vbo.h  Window.h
segaley/lib/gl-env/source/: Gl.cpp  Image.cpp  Shader.cpp  ShaderProgram.cpp  Sprite.cpp  Texture2D.cpp  Vao.cpp  Vbo.cpp
segaley/lib/gui/: CMakeLists.txt
segaley/lib/gui/include/: Frame.h  Rectangle.h  TextLine.h
segaley/lib/gui/source/: Frame.cpp  Rectangle.cpp  TextLine.cpp
segaley/lib/input-devices/: CMakeLists.txt
segaley/lib/input-devices/include/: Keyboard.h
segaley/lib/input-devices/source/: Keyboard.cpp
segaley/lib/main/: CMakeLists.txt
segaley/lib/main/include/: Gl.h  Glfw.h  Program.h  Rect.h  Utils.h  Window.h  WindowSize.h
segaley/lib/main/source/: Color.cpp  DebugActions.cpp  Gl.cpp  Glfw.cpp  Image.cpp  Program.cpp  Repeater.cpp  Window.cpp  WindowSize.cpp  main.cpp
segaley/lib/misc/: CMakeLists.txt
segaley/lib/misc/include/: Color.h  DebugActions.h  Repeater.h
segaley/lib/misc/source/: DebugActions.cpp  Repeater.cpp  Utils.cpp
segaley/lib/shaders/: CMakeLists.txt
segaley/lib/shaders/include/: GuiShader.h  MainShader.h
segaley/lib/shaders/source/: GuiShader.cpp  MainShader.cpp
